bk_ida/gccida/g0/copy_loop_body
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2246:1: error: must use 'enum' tag to refer to type 'unroll_types'
unroll_types unroll_type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2270:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+50h] [rbp-C0h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2270:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+50h] [rbp-C0h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2288:1: error: use of undeclared identifier 'induction_1'
induction_1 *tv; // [rsp+C0h] [rbp-50h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2288:14: error: use of undeclared identifier 'tv'
induction_1 *tv; // [rsp+C0h] [rbp-50h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2322:31: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pattern = (  struct rtx_def *)insn[2]; 
                              ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2327:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = ( rtx)insn[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2337:1: error: use of undeclared identifier 'v'
v = addr_combined_regs[*( unsigned int *)( v11->fld[0].rtwint + 8)]; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2338:18: error: use of undeclared identifier 'v'
bl_0 = ivs->regs[v->src_reg->fld[0].rtuint].iv.class; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2340:7: error: use of undeclared identifier 'tv'
for ( tv = bl_0->giv; tv; tv = tv->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2340:23: error: use of undeclared identifier 'tv'
for ( tv = bl_0->giv; tv; tv = tv->next_iv ) 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2340:27: error: use of undeclared identifier 'tv'
for ( tv = bl_0->giv; tv; tv = tv->next_iv ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2340:32: error: use of undeclared identifier 'tv'
for ( tv = bl_0->giv; tv; tv = tv->next_iv ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2342:6: error: use of undeclared identifier 'tv'
if ( tv->giv_type == DEST_ADDR && v == tv->same && *tv->location == tv->dest_reg ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2342:35: error: use of undeclared identifier 'v'
if ( tv->giv_type == DEST_ADDR && v == tv->same && *tv->location == tv->dest_reg ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2342:40: error: use of undeclared identifier 'tv'
if ( tv->giv_type == DEST_ADDR && v == tv->same && *tv->location == tv->dest_reg ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2342:53: error: use of undeclared identifier 'tv'
if ( tv->giv_type == DEST_ADDR && v == tv->same && *tv->location == tv->dest_reg ) 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2342:69: error: use of undeclared identifier 'tv'
if ( tv->giv_type == DEST_ADDR && v == tv->same && *tv->location == tv->dest_reg ) 
                                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/unroll.c:2345:6: error: use of undeclared identifier 'tv'
if ( tv->mult_val != v->mult_val ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/copy_loop_body/src/obj/unroll.o] Error 1
